--- a/pro-iptv-server/panel.html
+++ b/pro-iptv-server/panel.html
@@ -1,8 +1,16 @@
-<h2>Pro IPTV Panel</h2>
-
-<form method="POST" action="/add">
-URL:<br>
-<input name="url" style="width:400px">
-<br><br>
-<button type="submit">Film Ekle</button>
-</form>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Pro IPTV Panel</title>
+</head>
+<body>
+  <h2>Pro IPTV Panel</h2>
+  <form method="POST" action="/add">
+    Film URL:<br>
+    <input name="url" style="width:400px" required>
+    <button type="submit">Ekle</button>
+  </form>
+  <br>
+  <a href="/playlist.m3u8" target="_blank">M3U Linkini Gör</a>
+</body>
+</html>
