--- a/prolivetv/index.html
+++ b/prolivetv/index.html
@@ -2,8 +2,19 @@
 <html>
 <head>
     <meta http-equiv="refresh" content="0;url=player.html">
+    <style>
+        body {
+            background: #000;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            font-family: Arial, sans-serif;
+        }
+    </style>
 </head>
 <body>
-    <p>Yönlendiriliyorsunuz... <a href="player.html">Tıklayın</a></p>
+    <div>📺 damar FM TV'ye yönlendiriliyorsunuz...</div>
 </body>
 </html>
